--- a/css/layout.css
+++ b/css/layout.css
@@ -37,9 +37,10 @@ html,body {
 
       #headerText{
 	  padding-top:20px;
-      padding-left:25px;
+      	  padding-left:25px;
 	  width:70%;
 	  float:left;
+	  display:inline;
 	  }
 
       #title {
@@ -131,6 +132,7 @@ html,body {
 	  width:100px;
 	  text-align:right;
 	  z-index:100;
+	  display:inline;
 	  }
 
 	  #social{
