--- a/css/layout.css
+++ b/css/layout.css
@@ -144,6 +144,7 @@
 	  width:30%;
 	  height:50px;
 	  margin:4px;
+	  background:url(../images/BS3.png) top left no-repeat;
 	  display:inline;
 	  }
 
