--- a/css/layout.css
+++ b/css/layout.css
@@ -79,7 +79,7 @@
 	.addthis_sharing_toolbox{
 		float:right;
 		display:inline;
-		margin-top:90px;
+		margin-top:60px;
 		margin-right:180px;
 		padding:5px;
 	}
@@ -147,6 +147,7 @@
 	  width:30%;
 	  height:60px;
 	  margin:4px;
+	  left:10%;
 	  background:url(../images/BS3.png) top left no-repeat;
 	  display:inline;
 	  }
