--- a/css/layout.css
+++ b/css/layout.css
@@ -79,7 +79,7 @@
 	.addthis_sharing_toolbox{
 		float:right;
 		display:inline;
-		margin-top:60px;
+		margin-top:10%;
 		margin-right:10%;
 		padding:5px;
 	}
