--- a/css/layout.css
+++ b/css/layout.css
@@ -147,7 +147,7 @@
 	  width:30%;
 	  height:60px;
 	  margin:4px;
-	  left:10%;
+	  margin-left:10%;
 	  background:url(../images/BS3.png) top left no-repeat;
 	  display:inline;
 	  }
