--- a/css/layout.css
+++ b/css/layout.css
@@ -80,8 +80,8 @@
 	.addthis_sharing_toolbox{
 		float:right;
 		display:inline;
-		margin-right:15%;
-		padding:5px;
+		margin-right:10%;
+		padding-bottom:5px;
 		opacity:0.8;
 	}
 	
